feat: lession 7 (#15)
