# docs/swagger.yaml
@@ -37,6 +37,26 @@ definitions:
       service_name:
         type: string
     type: object
+  handler.loginRequest:
+    properties:
+      password:
+        example: my_SECURE_password123@
+        minLength: 8
+        type: string
+      username:
+        example: testuser001
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  handler.loginResponse:
+    properties:
+      data:
+        type: string
+      message:
+        type: string
+    type: object
   handler.shortenURLRequest:
     properties:
       exp:
@@ -54,6 +74,18 @@ definitions:
         type: string
       message:
         type: string
+    type: object
+  handler.updateProfileRequest:
+    properties:
+      display_name:
+        example: Updated User 001
+        type: string
+      email:
+        example: updatedtestuser001@example.com
+        type: string
+    required:
+    - display_name
+    - email
     type: object
   model.User:
     properties:
@@ -78,10 +110,7 @@ definitions:
     type: object
 host: localhost:8080
 info:
-  contact:
-    email: author@gmail.com
-    name: API Support
-    url: http://www.example.com/support
+  contact: {}
   description: This is the API documentation for the Bookmark Management service.
   title: Bookmark Management API
   version: "1.2"
@@ -175,7 +204,99 @@ paths:
       summary: Shorten a URL
       tags:
       - URL
-  /v1/user/register:
+  /v1/self/info:
+    get:
+      description: Retrieve the profile of the authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.createUserResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.Message'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Message'
+      security:
+      - Bearer: []
+      summary: Get user profile
+      tags:
+      - Users
+    put:
+      consumes:
+      - application/json
+      description: Update the profile of the authenticated user
+      parameters:
+      - description: Updated user profile
+        in: body
+        name: profile
+        required: true
+        schema:
+          $ref: '#/definitions/handler.updateProfileRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Message'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Message'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.Message'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Message'
+      security:
+      - Bearer: []
+      summary: Update user profile
+      tags:
+      - Users
+  /v1/users/login:
+    post:
+      consumes:
+      - application/json
+      description: Authenticate a user and return a JWT token
+      parameters:
+      - description: User credentials
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/handler.loginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.loginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Message'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.Message'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Message'
+      summary: User login
+      tags:
+      - Users
+  /v1/users/register:
     post:
       consumes:
       - application/json
@@ -207,4 +328,10 @@ paths:
       - Users
 schemes:
 - http
+securityDefinitions:
+  Bearer:
+    description: Type "Bearer" followed by a space and JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
